# aliyun-tablestore-cpp-sdk

./: .gitignore  CMakeLists.txt
doc/: user_guide.cn.md
examples/: async_list_table.cpp  auto_incr.cpp  filter.cpp  get_range_iter.cpp  sync_batch_get_row.cpp  sync_batch_write.cpp  sync_create_table_with_reserved_throughput.cpp  sync_delete_row.cpp  sync_describe_table.cpp  sync_list_table.cpp  sync_list_table_with_sts.cpp  sync_simple_create_delete_table.cpp  sync_update_row.cpp  sync_update_table_with_reserved_throughput.cpp  sync_write_read_single_row.cpp
src/: CMakeLists.txt
src/tablestore/: CMakeLists.txt
src/tablestore/core/: CMakeLists.txt  batch_writer.cpp  batch_writer.hpp  client.cpp  client.hpp  error.hpp  range_iterator.cpp  range_iterator.hpp  retry.cpp  retry.hpp  types.cpp  types.hpp
src/tablestore/core/protocol/: CMakeLists.txt  zero_copy_stream.cpp  zero_copy_stream.hpp
src/tablestore/util/: CMakeLists.txt  arithmetic.cpp  arithmetic.hpp  iterator.hpp  iterator.ipp  logger.cpp  logger.hpp  mempiece.cpp  mempiece.hpp  mempiece.ipp  mempool.cpp  mempool.hpp  metaprogramming.hpp  move.ipp  prettyprint.cpp  prettyprint.ipp  result.hpp  security.hpp  threading.cpp  threading.hpp  timestamp.hpp  try.hpp
test/functiontest/: async_functiontest.cpp  data_functiontest.cpp  table_functiontest.cpp
test/testa/: testa.cpp  testa.ipp  testa_main.cpp
test/unittest/core/: async_client_unittest.cpp  batch_writer_unittest.cpp  bookmark_input_stream_unittest.cpp  common.cpp  common.hpp  http_client_unittest.cpp  http_endpoint_unittest.cpp  retry_unittest.cpp  (+4 more)
(+43 files in other folders)
